--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,21 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4.9.0"
+config = "0.15.11"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
+
+[dependencies.sqlx]
+version = "0.8"
+default-features = false
+features = [
+	"runtime-tokio-rustls",
+	"macros",
+	"postgres",
+	"uuid",
+	"chrono",
+	"migrate"
+]
 
 [dev-dependencies]
 reqwest = "0.12.12"
