--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4.9.0"
+chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
 config = "0.15.11"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1.17.0", features = ["v4"] }
 
 [dependencies.sqlx]
 version = "0.8"
