--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "zero2prod"
 actix-web = "4.9.0"
 chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
 config = "0.15.11"
+env_logger = "0.11.8"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.17.0", features = ["v4"] }
