--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ actix-web = "4.9.0"
 chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
 config = "0.15.11"
 env_logger = "0.11.8"
+log = "0.4.27"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.17.0", features = ["v4"] }
